<resources>
    <string name="app_name">Info COVID App</string>

    <!-- Menu -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="country_cases">Country cases</string>
    <string name="about_page">About</string>
    <string name="nd_title">COVID-19</string>
    <string name="nd_description">Option menu</string>

    <!-- Country Activity -->
    <string name="enter_your_country">Enter your country</string>
    <string name="select_your_country">
        Please find and select your country in the following list</string>
    <string name="next">Siguiente</string>
    <string name="note">Note: Countries appear in English.</string>

    <!-- Cases Activity -->
    <string name="country">Country:</string>
    <string name="date">Date:</string>
    <string name="confirmed">Confirmed:</string>
    <string name="deaths">Deaths:</string>
    <string name="recovered">Recovered:</string>
    <string name="active">Active:</string>
    <string name="change_country">Change Country</string>
    <string name="new_cases">New cases</string>

    <!-- Alert Dialogs -->
    <string name="alert_title_country">Are you sure you want to save the country?</string>
    <string name="alert_description_country">Do not worry, you can change country later</string>
    <string name="alert_ok">Accept</string>
    <string name="alert_no">Cancel</string>
    <string name="alert_title_cases">Are you sure you want to change country?</string>

    <!-- Mensajes informativos -->
    <string name="msj_no_country">Sorry, no cases found for this country</string>
    <string name="msj_error">There was an error, please try again later</string>
    <string name="msj_error1">A</string>
    <string name="msj_error2">error has occurred, try again later</string>

    <!-- About Page -->
    <string name="developer_name">Sebastian Rojas Vargas</string>
    <string name="education">Education</string>
    <string name="contact">Contact</string>
    <string name="dev_github">SebastianRV26</string>
    <string name="dev_linkedin">sebastian-rojas-vargas</string>
    <string name="dev_info">Computer engineering student at the Technological
        Institute of Costa Rica (ITCR).</string>
    <string name="dev_job">Mobile Developer at</string>
    <string name="dev_community">ITCR Mobile Applications Community.</string>
    <string name="year">Developed in 2020</string>
    <string name="movicom">comunidadmovilsc</string>
    <string name="tec">tec.ac.cr</string>

</resources>
