<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".views.SelectionActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:indeterminateTint="@color/colorAccent"
        android:scaleY="4" />

    <SearchView
        android:id="@+id/svCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/enter_your_country" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/select_your_country"
        android:textColor="@color/colorBlack" />

    <ListView
        android:id="@+id/lvCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/note"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

</LinearLayout>